[gd_scene load_steps=4 format=3 uid="uid://cdp82ichpjwub"]

[ext_resource type="Script" uid="uid://dqwwsvyl0guht" path="res://scripts/pickables.gd" id="1_g2exc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lg52c"]
bg_color = Color(0, 0, 0, 0.5137255)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_20pku"]
Label/font_sizes/font_size = 14
Label/styles/normal = SubResource("StyleBoxFlat_lg52c")

[node name="HazardScanner" type="Area2D"]
collision_mask = 16
script = ExtResource("1_g2exc")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -105.0
offset_top = -74.0
offset_right = 106.0
offset_bottom = -47.0
theme = SubResource("Theme_20pku")
text = "Press E to Pick Hazard Scanner"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
